PROJECT(kfext_ufx)

if(WIN32)
    SET(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS OFF)
endif()

IF(NOT UFX_API_VERSION)
    SET(UFX_API_VERSION tdf_ufx_api)
ENDIF()

IF(WIN32)
    SET(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS OFF)
    #SET(API_LIB_PATH api/${UFX_API_VERSION}/lib/win64/dll)
    SET(API_LIB_PATH api/${UFX_API_VERSION}/lib)
	#set(API_LIB_PATH api/tdf_ufx_api/lib)
ENDIF()
IF(UNIX AND NOT APPLE)
## linux 再考虑
    SET(API_LIB_PATH api/${UFX_API_VERSION}/lib)
ENDIF()
## 再考虑
IF(APPLE)
    #SET(XTP_API_VERSION 1.1.18.13)
    #SET(API_LIB_PATH api/${XTP_API_VERSION}/lib/macosx)
    SET(API_LIB_PATH api/${UFX_API_VERSION}/lib)
ENDIF()

INCLUDE_DIRECTORIES(api/${UFX_API_VERSION}/include/winAPI)
LINK_DIRECTORIES(${API_LIB_PATH})

AUX_SOURCE_DIRECTORY(src SOURCE_FILES)

SET(KF_EXTENSION_BUILD_DIR ${KF_EXTENSIONS_BUILD_DIR}/ufx)

CONFIGURE_FILE(__init__.py "${KF_EXTENSION_BUILD_DIR}/__init__.py")
CONFIGURE_FILE(package.json "${KF_EXTENSION_BUILD_DIR}/package.json")

PYBIND11_ADD_MODULE(${PROJECT_NAME} SHARED ${SOURCE_FILES})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${KF_EXTENSION_BUILD_DIR})
IF(WIN32)
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE ${KF_EXTENSION_BUILD_DIR})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG ${KF_EXTENSION_BUILD_DIR})
ENDIF()

#TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE xtptraderapi xtpquoteapi wingchun yijinjing)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE t2sdk TDFAPI30 wingchun yijinjing)
FILE(GLOB DLLS "${API_LIB_PATH}/*")
FILE(COPY ${DLLS} DESTINATION ${KF_EXTENSION_BUILD_DIR})

ADD_CUSTOM_COMMAND(OUTPUT package_json
        COMMAND ${CMAKE_COMMAND} -E copy ${PROJECT_SOURCE_DIR}/package.json ${KF_EXTENSION_BUILD_DIR})
ADD_CUSTOM_TARGET(kfext_ufx_package_json ALL DEPENDS package_json)
